--- a/public_html/agenda/calender/calender.html
+++ b/public_html/agenda/calender/calender.html
@@ -1,4 +1,4 @@
-<section data-ng-controller="YearCtrl">
+<section data-ng-controller="CalenderCtrl">
     <h1>{{thisYear}}</h1>
     <div class="month" data-ng-repeat="monthnumber in [1,2,3,4,5,6,7,8,9,10,11,12]">
         <h1>{{month[monthnumber - 1]}}</h1>
