--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
     <head>
         <title>MtCworkflow</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/year.css" />
+        <link rel="stylesheet" type="text/css" href="css/workflow.css" />
     </head>
     <body data-ng-app="MtCworkflow">
         <ul data-ng-controller="NavCtrl">
-            <li><a href="#" data-ng-click="findTemplate('')">home</a></li>
-            <li><a href="#" data-ng-click="findTemplate('agenda')">agenda</a></li>
+            <li><a href="#!/index">home</a></li>
+            <li><a href="#!/agenda">agenda</a></li>
         </ul>
         <div data-ng-view></div>
         <script type="text/javascript" src="js/date/date.extension.js"></script>
@@ -22,5 +22,6 @@
         <script type="text/javascript" src="index/angular.index.js"></script>
         <script type="text/javascript" src="agenda/angular.agenda.js"></script>
         <script type="text/javascript" src="agenda/calender/angular.calender.js"></script>
+        <script type="text/javascript" src="agenda/date/angular.date.js"></script>
     </body>
 </html>
