--- a/public_html/agenda/agenda.html
+++ b/public_html/agenda/agenda.html
@@ -1,9 +1,6 @@
-
-        <ul data-ng-controller="NavAgendaCtrl">
-            <li><a href="#" data-ng-click="findTemplate('')">home</a></li>
-            <li><a href="#" data-ng-click="findTemplate('calender')">calender</a></li>
-            <li><a href="#" data-ng-click="findTemplate('month')">maandoverzicht</a></li>
-            <li><a href="#" data-ng-click="findTemplate('week')">weekoverzicht</a></li>
-            <li><a href="#" data-ng-click="findTemplate('day')">dagoverzicht</a></li>
-        </ul>
-        
+<ul>
+    <li><a href="#!/agenda/index">home</a></li>
+    <li><a href="#!/agenda/calender">calender</a></li>
+    <li><a href="#!/agenda/week">weekoverzicht</a></li>
+    <li><a href="#!/agenda/date">dagoverzicht</a></li>
+</ul>
