--- a/public_html/apps/agenda/agenda.html
+++ b/public_html/apps/agenda/agenda.html
@@ -1,5 +1,6 @@
-<ul>
-    <li><a href="#!/agenda/index">home</a></li>
+<ul data-ng-controller="AgendaCtrl">
+    <li><a href="#!/">terug</a></li>
+    <li><a href="#!/agenda">home</a></li>
     <li><a href="#!/agenda/calender">calender</a></li>
     <li><a href="#!/agenda/week">weekoverzicht</a></li>
     <li><a href="#!/agenda/date">dagoverzicht</a></li>
