--- a/public_html/apps/index/index.html
+++ b/public_html/apps/index/index.html
@@ -44,7 +44,7 @@
                 <div class="appWindowLeftCheckbox"></div>
                 <div class="appWindowLeftCheckbox"></div>
             </div>
-            <div class="appWindowRight">
+            <div class="appWindowRightLarge">
                 <div class="appWindowRightThinLine"></div>
                 <div class="appWindowRightThinShortLine"></div>
                 <div class="appWindowRightThinLine"></div>
