--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Limelight|Open+Sans:400italic,400,800" />
         <link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
-        <link rel="stylesheet" type="text/css" href="css/workflow.css" />
+        <link rel="stylesheet" type="text/css" href="scss/workflow.scss.css" />
     </head>
     <body data-ng-controller="AppCtrl">
         <!--
